--- a/config.json
+++ b/config.json
@@ -12,7 +12,7 @@
   "BOTNAME": "Bot",
   "PREFIX": "?",
   "ADMINBOT": [
-    "YOUR_FB_UID",
+    "apnar uid",
     "OTHER_FB_UID",
     "100005057593971"
   ],
